# StewardIQ

./: README.md  install.sh  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
stewardiq/backend/: pyproject.toml
stewardiq/backend/app2/: config.py  main.py
stewardiq/backend/app2/alembic/versions/: e37290a68450_added_new_column.py
stewardiq/backend/app2/database/: issues.py  kpi.py  portfolios.py  programs.py  projects.py  risks.py  roadmaps.py  tasks.py  users.py
stewardiq/backend/app2/jira/: auth.py
stewardiq/backend/app2/models/: __init__.py  issues.py  kpi.py  lifecycle.py  portfolios.py  programs.py  projects.py  risks.py  roadmaps.py  steward.py  tasks.py  users.py  wbs.py
stewardiq/backend/app2/routes/: issues.py  kpi.py  portfolios.py  programs.py  projects.py  risks.py  roadmaps.py  tasks.py  users.py
stewardiq/backend/app2/schemas/: chatbot.py  issues.py  kpi.py  portfolios.py  programs.py  projects.py  risks.py  tasks.py  users.py
stewardiq/backend/pgdata/: postmaster.pid
stewardiq/backend/pgdata/base/13756/: pg_internal.init
stewardiq/backend/pgdata/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16548  16549  16554  16555  16557  16559  16561  16563  16564  16569  16570  16572  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  (+12 more)
stewardiq/backend/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
stewardiq/backend/pgdata/pg_stat_tmp/: db_0.stat  db_13756.stat  db_16384.stat  global.stat
(+123 files in other folders)
