[tool.poetry]
name = "app2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.109.2,<0.110.0"
starlette = ">=0.36.3,<0.37.0"
uvicorn = ">=0.23.2,<0.24.0"
sqlalchemy = "^2.0.27"
pg8000 = "^1.30.4"
pydantic = {extras = ["email"], version = "^2.6.1"}
asyncpg = "^0.29.0"
regex = "^2023.12.25"
requests = "^2.31.0"
pybase64 = "^1.3.2"
httpx = "0.26.0"
asyncio = "^3.4.3"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
cloud-sql-python-connector = "^1.7.0"
google-auth = "^2.28.1"
google-oauth2-tool = "^0.0.3"
langchain = "^0.1.12"
huggingface = "^0.0.1"
openai = "^1.14.1"
llama-index = "0.9.27"
langchain-openai = "^0.0.8"
langchain-community = "^0.0.28"
langchainhub = "^0.1.15"
python-dotenv = "^1.0.1"
pgml = ">=0.10.0,<0.11.0"
unstructured = "^0.12.5"
langserve = "^0.0.51"
langchain-experimental = "^0.0.54"
tqdm = "^4.66.2"
pdf2image = "^1.17.0"
pdfminer-six = "20221105"
opencv-python = "^4.9.0.80"
unstructured-inference = "^0.7.24"
pikepdf = "^8.13.0"
pypdf = "^4.1.0"
pgvector = "^0.2.5"
sentence-transformers = "^2.5.1"
transformers = "^4.38.2"
accelerate = "^0.28.0"
langchain-cli = "^0.0.21"
websockets = "^12.0"
beautifulsoup4 = "^4.12.2"
autollm = {extras = ["readers"], version = "^0.1.10"}

[build-system]
requires = ["poetry-core"]
build-app = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"